src/tests/errors/parsing/test04.cmp
program R begin  
  struct abc { };
  struct ef { x : int };
  struct a5 { x : int;      y : bool     }; (* Should fail here: semicolon *)
end  
